# WwiseCMake

./: .gitignore  CMakeLists.txt  readme.md
assets/soundbanks/Mac/: Init.bnk  Music.bnk
assets/soundbanks/Mac/Media/: 40100499.wem  80837602.wem  898304494.wem
assets/soundbanks/Windows/: Init.bnk
assets/soundbanks/Windows/Media/: 883734590.wem
libs/: CMakeLists.txt
libs/sdl/: CMakeLists.txt
libs/wwise/: CMakeLists.txt
libs/wwise/include/: readme.md
libs/wwise/lib/: readme.md
libs/wwise/samples/: readme.md
src/: main.cpp
src/audio/: audio_engine.cpp  audio_engine.h
src/core/: game.cpp  game.h
