add_library(SDL SHARED IMPORTED GLOBAL)
add_library(SDL_TTF SHARED IMPORTED GLOBAL)

if (WIN32 AND MSVC)
    set_property(TARGET SDL PROPERTY IMPORTED_LOCATION ${CMAKE_CURRENT_SOURCE_DIR}/lib/x64/SDL3.dll)
    set_property(TARGET SDL PROPERTY IMPORTED_IMPLIB ${CMAKE_CURRENT_SOURCE_DIR}/lib/x64/SDL3.lib)
    set_property(TARGET SDL_TTF PROPERTY IMPORTED_LOCATION ${CMAKE_CURRENT_SOURCE_DIR}/lib/x64/SDL3_ttf.dll)
    set_property(TARGET SDL_TTF PROPERTY IMPORTED_IMPLIB ${CMAKE_CURRENT_SOURCE_DIR}/lib/x64/SDL3_ttf.lib)
elseif (APPLE)
    set_property(TARGET SDL PROPERTY IMPORTED_LOCATION ${CMAKE_CURRENT_SOURCE_DIR}/lib/MacOS/SDL3.framework/SDL3)
    set_property(TARGET SDL_TTF PROPERTY IMPORTED_LOCATION ${CMAKE_CURRENT_SOURCE_DIR}/lib/MacOS/SDL3_ttf.framework/SDL3_ttf)
endif()

target_include_directories(SDL INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_include_directories(SDL_TTF INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/include)